--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.35 2009/08/31 22:20:52 ith Exp $
+% $Id: dbi-intro.tex,v 1.36 2009/09/01 09:37:38 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.35 2009/08/31 22:20:52 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.36 2009/09/01 09:37:38 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -55,7 +55,7 @@ in which inflation is driven by one or more ${\rm D}$-branes
 propagating in a warped `throat' background. 
 % 
 In the simplest version of the scenario, 
-the inflaton parametrizes the radial 
+the inflaton parametrises the radial 
 position in the throat of a single ${\rm D3}$-brane. 
 The brane dynamics are determined by the DBI action in such a 
 way that the inflaton's kinetic energy is bounded from above by the warped 
@@ -116,7 +116,7 @@ scenarios which permit observational tensor signals.
 The desire to unify seemingly disparate theories has been a driving force in
 theoretical physics for more than a hundred years. This effort has produced 
 the Standard Model (SM) of particle physics which unifies three of the four
-fundamental forces in a robust theoretical framework. Since the realization of
+fundamental forces in a robust theoretical framework. Since the realisation of
 the SM a clear goal of theoretical physics has been the unification of the
 final force, gravity, into this framework. String theory is one of the leading
 contenders for achieving this unification. 
@@ -171,7 +171,7 @@ Linde:2005dd}.
 \subsection{Cosmology and String Theory}
 \label{sec:stringcos-dbiintro}
 % 
-Temperatures in the early univerese were far in excess of those attainable by
+Temperatures in the early universe were far in excess of those attainable by
 any earth-bound particle accelerator today. Hence a stringent test of any high
 energy
 theory is whether it predicts the same properties of the early universe that are
@@ -392,22 +392,22 @@ inflaton field.
 When the branes collide they will annihilate each other and produce energy to
 reheat the universe \cite{brane1,brane2,brane3,brane7,Brodie:2003qv,brane9}. 
 
-As described in Section \ref{sec:extradims} compacitifying dimensions
+As described in Section \ref{sec:extradims} compactifying dimensions
 introduces scalar fields known as moduli. These massless fields must be
-accounted for in the dynamics unless some way is found to stabilize them by
+accounted for in the dynamics unless some way is found to stabilise them by
 fixing their mass to be large.
 Initial efforts to induce inflation using D-branes ignored the issue of moduli
-stabilization. Instead it was
-assumed that whatever stabilization technique was used would have no discernable
-effect on the inflationary physics. Kachru \etal \cite{brane4} recognized that
-in fact the stabilization will be important and must be taken into account.
+stabilisation. Instead it was
+assumed that whatever stabilisation technique was used would have no discernable
+effect on the inflationary physics. Kachru \etal \cite{brane4} recognised that
+in fact the stabilisation will be important and must be taken into account.
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \subsection{Warped throats}
 \label{sec:warpedthroats-dbiintro}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 The moduli must
-be stabilized so that they do not appear in the effective action as
+be stabilised so that they do not appear in the effective action as
 massless fields. This can be achieved by switching on background fluxes in the
 compactified space. These fluxes are equivalent to magnetic
 fields in the higher dimensional space. By Gauss' theorem  the compact space
@@ -758,9 +758,9 @@ DBI scenario allow an upper limit to be put on $r$ using this relation.
 In this chapter we have introduced the Dirac-Born-Infeld inflationary scenario.
 Many attempts have been made to provide an inflationary expansion phase in the
 early universe using string theory. In compactifying from 10 dimensions to 4,
-complicated geometries and additional fluxes must be used to stabilize the
+complicated geometries and additional fluxes must be used to stabilise the
 remaining moduli fields. 
-The DBI scenario is an example of a non-canonical infaltionary model. With a
+The DBI scenario is an example of a non-canonical inflationary model. With a
 small sound speed significant amounts of non-gaussianity can be produced. This
 non-gaussianity can be related to the brane tension and tensor-scalar ratio
 through \eq{eq:approxlyth-dbiintro}. In the next chapter we will derive two
