Minor WMAP5 updates.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.19 2009/08/31 16:04:56 ith Exp $
+% $Id: dbi.tex,v 1.20 2009/09/14 16:19:01 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.19 2009/08/31 16:04:56 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.20 2009/09/14 16:19:01 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -48,10 +48,10 @@ $r \, \lsim \, 10^{-7}$. This
 is below the projected sensitivity of future Cosmic Microwave Background (CMB) polarization 
 experiments \cite{clover,vpj}. 
 \addtodo{Change Clover reference and change next para to WMAP5}
-On the other hand, the WMAP3 data 
+On the other hand, the WMAP5 data 
 favours a red perturbation spectrum with 
 $n_s<1$ when the tensor modes are negligible and 
-the scalar spectral index is effectively constant \cite{spergel}. 
+the scalar spectral index is effectively constant \cite{Komatsu:2008hk}. 
 For models which generate such a spectrum, 
 we identify a corresponding lower limit on the 
 tensor modes such that $r \, \gsim \, 0.1 (1-n_s)$. 
@@ -252,8 +252,7 @@ Condition (\ref{eq:generalbound}) is
 only weakly dependent on the level of non-Gaussianity 
 when $\fnl < -5$ and we may therefore neglect the 
 factor involving this parameter. 
-\addtodo{ Change to WMAP5 numbers}
-Substituting the WMAP3 normalization 
+Substituting the WMAP5 normalization 
 $P_S^2 = 2.5 \times 10^{-9}$ then implies that
 %  
 \begin{equation}
@@ -338,17 +337,16 @@ difference to our final conclusions.}.
 The analysis of the previous Section 
 indicates that standard versions of UV DBI inflation generate a 
 tensor spectrum that is unobservably 
-small. Hence, $r=0$ can be assumed as a prior 
-when discussing the WMAP3 data. 
-\addtodo{ Check WMAP5 has the same numbers}
+small. Hence, $r=0$ can be assumed as a prior when discussing the WMAP5 data.
 However, in this case the data 
-excludes a scale-invariant density spectrum at the $3 \sigma$ level
+disfavours a scale-invariant density spectrum at close to the $3 \sigma$ level
+($2.78\sigma$)
 when the running in the spectral index, $\alpha_s \equiv dn_s/d\ln k$, 
-is negligible \cite{spergel}.  
+is negligible \cite{Komatsu:2008hk}.  
 Furthermore, a blue spectral index 
 is only marginally consistent with the data when $r\ne 0$ and $\alpha_s=0$. 
-(The inferred upper limit is $n_s < 1.006$).
-Although the results from WMAP3 do allow for a blue spectrum if there is 
+(The inferred upper limit is $n_s < 1.018$).
+Although the results from WMAP5 do allow for a blue spectrum if there is 
 significant negative running in the spectral index, we will 
 focus in this Section 
 on models that generate a red spectral index $n_s<1$, since these seem 
