Introduced \N and \Neff macros and replaced throughout DBI paper.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.39 2009/09/01 09:34:26 ith Exp $
+% $Id: mainintro.tex,v 1.40 2009/09/16 13:01:57 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.39 2009/09/01 09:34:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.40 2009/09/16 13:01:57 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -292,7 +292,7 @@ The number of e-foldings between two measurements of the scale factor, $a_i$
 and $a_f$ is given by
 \begin{equation}
 \label{eq:nefolddefn-intro}
- n = \ln \frac{a_f}{a_i}\,.
+ \N = \ln \frac{a_f}{a_i}\,.
 \end{equation}
 
 Particles
