--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.21 2009/09/16 12:53:50 ith Exp $
+% $Id: dbi.tex,v 1.22 2009/09/16 13:01:57 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.21 2009/09/16 12:53:50 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.22 2009/09/16 13:01:57 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -132,28 +132,28 @@ is given by the Lyth bound
 % 
 \begin{equation}
 \label{eq:rtheory}
-\frac{1}{\Mpl^2} \left( \frac{d\varphi}{d {\cal{N}}} \right)^2 =
+\frac{1}{\Mpl^2} \left( \frac{d\varphi}{d \N} \right)^2 =
 \frac{r}{8} \,,
 \end{equation}
 % 
-where ${\cal{N}} \equiv \int dt H$. 
+where $\N \equiv \int dt H$. 
 Since $\varphi_* < \varphi_{UV}$, this 
 results in an upper bound on the observable tensor-scalar ratio
 \cite{bmpaper}: 
 % 
 \begin{equation}
 \label{eq:BMboundr}
-r_*  < \frac{32}{N ({\cal{N}}_{\mathrm{eff}})^2} \,,
+r_*  < \frac{32}{N (\Neff)^2} \,,
 \end{equation}
 % 
-where ${\cal{N}}_{\mathrm{eff}} \equiv 
-\int^{{\cal{N}}_{\mathrm{end}}}_0 d {\cal{N}} (r/r_*)^{1/2}$ 
+where $\Neff \equiv 
+\int^{{\cal{N}}_{\mathrm{end}}}_0 d \N (r/r_*)^{1/2}$ 
 is a model-dependent parameter that quantifies 
 how $r$ varies during the final stages of inflation.  
 
 \addtodo{Explain following para including example and citation for backreaction
 comment.}
-Typically, one expects $30 \, \lsim \, {{\cal{N}}_{\mathrm{eff}}} 
+Typically, one expects $30 \, \lsim \, {\Neff} 
 \, \lsim \, 60$, 
 although smaller values may be possible if the slow-roll conditions are 
 violated after observable scales have crossed the horizon. 
@@ -162,7 +162,7 @@ for backreaction effects to be negligible.
  Hence, the constraint (\ref{eq:BMboundr}) 
 imposes a strong restriction on DBI inflationary models. 
 On the other hand, the numerical value 
-of ${\cal{N}}_{\mathrm{eff}}$ is uncertain.  
+of $\Neff$ is uncertain.  
 Our aim here is to focus on the range of values covered by the 
 inflaton field during the observable stages of inflation. 
 This will result in a constraint on the tensor modes that 
@@ -200,7 +200,7 @@ $| \Delta \varphi_* |$ is bounded such that
 The observations of the CMB 
 that directly constrain the primordial tensor perturbations only 
 cover multipole values in the range $2 \le l \, \lsim \, 100$. 
-This is equivalent to no more than ${\Delta {\cal{N}}_{*}} \simeq {4}$ 
+This is equivalent to no more than ${\Delta \N_{*}} \simeq {4}$ 
 e-foldings of inflationary expansion and, in general,   
 corresponds to a narrow range of inflaton values. 
 To a first approximation, therefore, the fraction of the throat volume 
@@ -236,13 +236,13 @@ yields the upper limit
 \end{equation}
 % 
 Hence, employing the Lyth bound in the form $(\Delta \varphi_* / \Mpl )^2 \simeq 
-r (\Delta {\cal{N}}_*)^2 /8$  
+r (\Delta \N_*)^2 /8$  
 results in a very general upper limit on the tensor-scalar ratio: 
 \addtodo{ Show working}
 % 
 \begin{equation}
 \label{eq:generalbound}
-r_{*} < \frac{32 \pi^3}{(\Delta {\cal{N}}_*)^6 \mathrm{Vol}(X_5)} 
+r_{*} < \frac{32 \pi^3}{(\Delta \N_*)^6 \mathrm{Vol}(X_5)} 
 P_S^2 \left( 1- \frac{1}{3\fnl} \right) \,.
 \end{equation}
 % 
@@ -257,12 +257,12 @@ $P_S^2 = 2.5 \times 10^{-9}$ then implies that
 %  
 \begin{equation}
 \label{eq:upperbound}
-r_{*} < \frac{2.5\times 10^{-6}}{( \Delta {\cal{N}}_*)^6 \mathrm{Vol}(X_5)} \,.
+r_{*} < \frac{2.5\times 10^{-6}}{( \Delta \N_*)^6 \mathrm{Vol}(X_5)} \,.
 \end{equation}
 % 
 Furthermore, the most optimistic 
 estimate for the minimum number of e-foldings that could be 
-probed by observation is $\Delta {\cal{N}}_{*} \simeq 1$, whereas
+probed by observation is $\Delta \N_{*} \simeq 1$, whereas
 a generic compactification arises when 
 the volume of the Einstein five-manifold is $\mathrm{Vol}(X_5) 
 \simeq {\cal{O}} (\pi^3)$ \cite{ks}. This yields a model-independent 
@@ -280,7 +280,7 @@ of future CMB polarization experiments, which will measure
 ${r} \, {\gsim} \, 10^{-4}$ \cite{clover,vpj}. 
 If CMB  
 observations are able to span the full range of e-foldings such that
-$\Delta {\cal{N}}_* \simeq 4$, this constraint is strengthened to 
+$\Delta \N_* \simeq 4$, this constraint is strengthened to 
 ${r_*} \, {\lsim} \, {2 \times 10^{-11}}$.
 
 
@@ -480,12 +480,12 @@ In particular, combining the limits
 \begin{equation}
 \label{eq:upperboundvol}
 \mathrm{Vol}(X_5) < \frac{2 \times 10^{-5}}{(1-n_s) 
-(\Delta {\cal{N}}_{*} )^6}  \,,
+(\Delta \N_{*} )^6}  \,,
 \end{equation}
 % 
 and we find that $\mathrm{Vol}(X_5) \, \lsim \, 10^{-7}$ 
 for typical values $1-n_s \simeq 0.05$ and 
-$\Delta {\cal{N}}_* \simeq 4$. 
+$\Delta \N_* \simeq 4$. 
 \addtodo{ Any updates on this?}
 This 
 is comparable to the limit on the volume derived for the special case of a 
@@ -611,13 +611,13 @@ Eq. (\ref{eq:defvarphi}) also allows us to deduce
 that the infinitesimal variation of the effective 
 field $\tilde{\varphi}$ is given by the Lyth bound, 
 $(\Delta \tilde{\varphi} /\Mpl )^2 \simeq 
-r (\Delta {\cal{N}})^2/8$. This implies that 
+r (\Delta \N)^2/8$. This implies that 
 the variation of the inflaton field during inflation is 
 % 
 \begin{equation}
 \label{eq:newphivar}
 \int_0^{\varphi_{*}} \frac{d\varphi}{\Mpl} \, \sqrt{\frac{f_1f_2}{2}} 
-= \sqrt{\frac{r_*}{8}}  {\cal{N}}_{\mathrm{eff}} \,.
+= \sqrt{\frac{r_*}{8}}  \Neff \,.
 \end{equation}
 % 
 If we now restrict our attention to 
@@ -627,7 +627,7 @@ of $f_1f_2$ is negligible during that epoch, we find that
 \begin{equation}
 \label{eq:genphivary1}
 \left( \frac{\Delta \varphi}{\Mpl} \right)^2_{*} \simeq 
-\frac{(\Delta {\cal{N}}_{*} )^2}{4 f_1f_2} r_*  \,.
+\frac{(\Delta \N_{*} )^2}{4 f_1f_2} r_*  \,.
 \end{equation}
 % 
 On the other hand, the BM bound restricts the maximal 
@@ -641,17 +641,17 @@ must satisfy $| \Delta \varphi_*|<\varphi_{UV}$. Hence, it follows from
 Eq. (\ref{eq:genphivary1}) that\footnote{We are 
 being conservative by restricting our discussion to the 
 observable phase of inflation. More generally, if 
-$f_1f_2$ remains nearly constant over the last ${\cal{N}}$ 
+$f_1f_2$ remains nearly constant over the last $\N$ 
 e-foldings of inflation, 
-we may substitute $\Delta {\cal{N}}_* \rightarrow 
-{\cal{N}}_{\mathrm{eff}}$, where ${\cal{N}}_{\mathrm{eff}}$ 
+we may substitute $\Delta \N_* \rightarrow 
+\Neff$, where $\Neff$ 
 may be as large as 60. Thus, the generalized bound 
 (\ref{eq:genBMbound}) should be regarded as a necessary 
 (but not sufficient) condition to be satisfied by the tensor modes.} 
 % 
 \begin{equation}
 \label{eq:genBMbound}
-r_*< \frac{16}{N (\Delta {\cal{N}}_{*})^2} f_1f_2  \,.
+r_*< \frac{16}{N (\Delta \N_{*})^2} f_1f_2  \,.
 \end{equation}
 % 
 
@@ -665,7 +665,7 @@ for the generalized BM bound to be satisfied:
 %  
 \begin{equation}
 \label{eq:f2bound}
-\frac{f_2 (\varphi_*)\Mpl^4}{N} > \frac{(\Delta {\cal{N}}_*)^2}{\pi^2} 
+\frac{f_2 (\varphi_*)\Mpl^4}{N} > \frac{(\Delta \N_*)^2}{\pi^2} 
 \frac{1}{rP_S^2} \,.
 \end{equation}
 % 
@@ -683,7 +683,7 @@ that
 % 
 \begin{equation}
 \label{eq:evade}
-f_1f_2 > \frac{N (\Delta {\cal{N}}_*)^2 (1-n_s)}{4\sqrt{-3\fnl}} \,.
+f_1f_2 > \frac{N (\Delta \N_*)^2 (1-n_s)}{4\sqrt{-3\fnl}} \,.
 \end{equation}
 % 
 
@@ -704,7 +704,7 @@ for the generalized BM bound to be satisfied in IR inflation:
 % 
 \begin{equation}
 \label{eq:f2IRlower}
-\frac{f_2\Mpl^4}{N} > \frac{\sqrt{3} (\Delta {\cal{N}}_*)^2}{4\pi^2}
+\frac{f_2\Mpl^4}{N} > \frac{\sqrt{3} (\Delta \N_*)^2}{4\pi^2}
 \frac{\sqrt{-\fnl}}{(1-n_s)P_S^2}  \,.
 \end{equation}
 % 
