--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.11 2009/08/27 20:31:20 ith Exp $
+% $Id: ihmacros.sty,v 1.12 2009/09/16 13:01:57 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -22,6 +22,8 @@
 \newcommand{\R}{\mathcal{R}}
 \newcommand{\A}{\mathcal{A}}
 \renewcommand{\d}{\mathrm{d}}
+\newcommand{\N}{\ensuremath{\mathcal{N}}}
+\newcommand{\Neff}{\ensuremath{\N_\mathrm{eff}}}
 
 % Maths commands
 % \newcommand\vp{\varphi_0}
