--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.19 2009/08/06 15:35:55 ith Exp $
+% $Id: multibrane.tex,v 1.20 2009/09/16 13:08:04 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.19 2009/08/06 15:35:55 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.20 2009/09/16 13:08:04 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -186,7 +186,7 @@ a limit on the value of the warp factor $h(\varphi_*)$ on CMB scales:
 \begin{equation}
 \label{eq:warptorelax}
 \frac{NT_3h^4_*}{\Mpl^4} < 
-\frac{8\pi^2 (1-n_s)P_S^2}{\sqrt{-3\fnl}(\Delta {\cal{N}}_*)^2} \,.
+\frac{8\pi^2 (1-n_s)P_S^2}{\sqrt{-3\fnl}(\Delta \N_*)^2} \,.
 \end{equation}
 % 
 
@@ -202,7 +202,7 @@ value of the inflation during observable inflation:
 \begin{equation}
 \label{eq:phivalue-dbi}
 \frac{\varphi_*^4}{\Mpl^4} < 
-\frac{8\pi^2 (1-n_s)P_S^2}{\sqrt{-3\fnl} ( \Delta {\cal{N}}_*)^2} 
+\frac{8\pi^2 (1-n_s)P_S^2}{\sqrt{-3\fnl} ( \Delta \N_*)^2} 
 \frac{\lambda}{N} \,,
 \end{equation}
 %  
@@ -217,12 +217,12 @@ ${\rm D3}$-brane charge:
 % 
 \begin{equation}
 \label{eq:Nlimit-dbi}
-N< \frac{8\pi^2 (1-n_s)P_S^2}{\sqrt{-3\fnl} ( \Delta {\cal{N}}_*)^2}
+N< \frac{8\pi^2 (1-n_s)P_S^2}{\sqrt{-3\fnl} ( \Delta \N_*)^2}
 \left( \frac{\Mpl}{h_{\rm cut}m_s} \right)^4  \,.
 \end{equation}
 % 
 Assuming the typical values $m_s \sim 10^{-2}\Mpl$, 
-$\Delta {\cal{N}}_* \simeq 4$ and 
+$\Delta \N_* \simeq 4$ and 
 $h_{\rm cut} \sim 10^{-2}$ implies  
 $N < 7 \times 10^7 (1-n_s)(-\fnl)^{-1/2} < 2\times 10^6$, where 
 the latter inequality follows for $1-n_s <0.05$ and $\fnl <-5$. 
@@ -242,7 +242,7 @@ Hence, combining inequalities
 \begin{equation}
 \label{eq:nlimit-dbi}
 \hat{C} \ll 
-\frac{32 \pi^4 (1-n_s)P_S^2}{\sqrt{-3\fnl} ( \Delta {\cal{N}}_*)^2}
+\frac{32 \pi^4 (1-n_s)P_S^2}{\sqrt{-3\fnl} ( \Delta \N_*)^2}
 \frac{g_s}{\mathrm{Vol} (X_5) }
 \left( \frac{\Mpl}{h_{\rm cut}m_s} \right)^4  \,,
 \end{equation}
@@ -252,9 +252,9 @@ $\mathrm{Vol}(X_5) \simeq \pi^3$ then yields the limit
 $\hat{C} \ll 10^{6} (1-n_s)(-\fnl)^{-1/2} < 2 \times 10^4$, or equivalently,  
 $n \ll 150$. Furthermore, since $f_1f_2 \simeq {\rm constant}$, 
 the inequality (\ref{eq:genBMbound}) may be strengthened by a 
-factor of $(   {\cal{N}}_{\mathrm{eff}} /\Delta {\cal{N}}_*)^2$ by 
+factor of $(   \Neff /\Delta \N_*)^2$ by 
 substituting 
-$\Delta {\cal{N}}_* \rightarrow {\cal{N}}_{\mathrm{eff}}$. This ratio 
+$\Delta \N_* \rightarrow \Neff$. This ratio 
 could be as 
 high as $(60/4)^2 \simeq 200 $, which would rule out this particular
 model. 
@@ -278,7 +278,7 @@ In this case, the generalized BM bound (\ref{eq:warptorelax}) becomes
 \label{eq:loglimit-dbi}
 \frac{8\pi K}{3Mg_s} -\ln N > 4 \ln \left( \frac{m_s}{g_s^{1/4}\Mpl} \right)
 -\ln \left( 
-\frac{64\pi^5 (1-n_s)P_S^2}{\sqrt{-3\fnl} ( \Delta {\cal{N}}_*)^2}
+\frac{64\pi^5 (1-n_s)P_S^2}{\sqrt{-3\fnl} ( \Delta \N_*)^2}
 \right) \,.
 \end{equation}
 % 
@@ -294,7 +294,7 @@ generalized BM bound to be satisfied:
 \begin{equation}
 \label{eq:Nlowerlimit-dbi}
 \frac{1}{N} \exp \left( \frac{8\pi g_s N}{3}  \right)
-> \frac{\sqrt{-3\fnl} ( \Delta {\cal{N}}_*)^2}{64\pi^5 
+> \frac{\sqrt{-3\fnl} ( \Delta \N_*)^2}{64\pi^5 
 (1-n_s)P_S^2} \frac{1}{g_s} \left( \frac{m_s}{\Mpl} \right)^4 \,.
 \end{equation}
 % 
@@ -417,7 +417,7 @@ yields an upper limit on the tensor-scalar ratio:
 % 
 \begin{equation}
 \label{eq:BMbound-multi}
-r_* < \frac{32}{N {\cal{N}}_{\rm eff}^2} \left( 
+r_* < \frac{32}{N \Neff^2} \left( 
 c_s P_{,X} \right)_* \,.
 \end{equation}
 % 
@@ -476,7 +476,7 @@ yields the upper limit \cite{lidseyhuston}
 % 
 \begin{equation}
 \label{eq:LHbound}
-r_* < \frac{10}{(\Delta {\cal{N}})_*^2} \left( \frac{T_3}{\Vol} \right)^{1/3} 
+r_* < \frac{10}{(\Delta \N)_*^2} \left( \frac{T_3}{\Vol} \right)^{1/3} 
 \left( \frac{h_*}{\Mpl} \right)^{4/3} \left( c_s P_{,X} \right)_* \,.
 \end{equation}
 % 
@@ -489,7 +489,7 @@ implies that the LH bound is the stronger of the two when
 \label{eq:LHstronger}
 h_*^{4/3}N < 20 \left( \Vol g_s \right)^{1/3}  
 \left( \frac{m_s}{\Mpl} \right)^{-4/3} 
-\frac{( \Delta {\cal{N}} )_*^2}{{\cal{N}}^2_{\rm eff}} \,.
+\frac{( \Delta \N )_*^2}{\Neff^2} \,.
 \end{equation}
 % 
 For typical field-theoretic values $\Vol \simeq \mathcal{O}(\pi^3)$, $m_s \sim
@@ -498,7 +498,7 @@ and  $g_s \sim 10^{-2}$, this implies
 %  
 \begin{equation}
 \label{eq:LHstronger1}
-h_*^{4/3} N < 300 \frac{(\Delta {\cal{N}})^2_*}{{\cal{N}}_{\rm eff}^2} \,.
+h_*^{4/3} N < 300 \frac{(\Delta \N)^2_*}{\Neff^2} \,.
 \end{equation}
 % 
 
@@ -654,7 +654,7 @@ into the BM bound (\ref{eq:BMbound-multi}) and the LH bound (\ref{eq:LHbound}) i
 %  
 \begin{equation}
 \label{eq:weakBM-multi}
-r_*< \frac{32}{N {\cal{N}}_{\rm eff}^2} \frac{(-m) f_1 f_2}{\sqrt{2(1-m)}}
+r_*< \frac{32}{N \Neff^2} \frac{(-m) f_1 f_2}{\sqrt{2(1-m)}}
 \left( -\frac{\fnl}{\beta} \right)^{(1-2m)/2}
 \end{equation}
 % 
@@ -662,7 +662,7 @@ and
 %  
 \begin{equation}
 \label{eq:weakLH-multi}
-r_* < \frac{10}{(\Delta {\cal{N}})_*^2} \left( \frac{T_3}{\Vol} \right)^{1/3} 
+r_* < \frac{10}{(\Delta \N)_*^2} \left( \frac{T_3}{\Vol} \right)^{1/3} 
 \left( \frac{h_*}{\Mpl} \right)^{4/3}
 \frac{(-m) f_1 f_2}{\sqrt{2(1-m)}}
 \left( -\frac{\fnl}{\beta} \right)^{(1-2m)/2}
@@ -1075,7 +1075,7 @@ the LH bound (\ref{eq:LHbound}) to yield
 %  
 \begin{equation}
 \label{eq:actualLH-multi}
-r_* < \frac{1100}{(\Delta {\cal{N}} )_*^6} 
+r_* < \frac{1100}{(\Delta \N )_*^6} 
 \frac{[1+(n-1)^2Y]}{\Vol} \Ps \fnl^2 \,.
 \end{equation}
 % 
@@ -1095,11 +1095,11 @@ In what follows, we chose natural field-theoretic values for the volume,
 $\Vol \simeq \pi^3$, and the string coupling, 
 $g_s \simeq 10^{-2}$, and further assume that 
 $(n-1)^2 Y \gg 1$. It is possible that observations will probe a 
-range of scales $\Delta {\cal{N}}_* \simeq 1$, 
+range of scales $\Delta \N_* \simeq 1$, 
 but it is more realistic to require that 
 the tensor-scalar ratio should not change significantly over the 
 entire range of scales that are accessible to cosmological observation,  
-which corresponds to $\Delta {\cal{N}}_* \simeq 4$.
+which corresponds to $\Delta \N_* \simeq 4$.
 After substitution of the above values, therefore, 
 the bound (\ref{eq:actualLH-multi}) simplifies to
 %  
@@ -1207,14 +1207,14 @@ BM bound (\ref{eq:BMbound-multi}) for this class of models. This is given by
 % 
 \begin{equation}
 \label{eq:BMAdS-multi}
-r_* < -\frac{42}{N {\cal{N}}^2_{\rm eff}}\sqrt{1 +(n-1)^2Y}\fnl 
+r_* < -\frac{42}{N \Neff^2}\sqrt{1 +(n-1)^2Y}\fnl 
 \end{equation}
 %  
 and, in the case of an $AdS_5 \times X_5$ throat, simplifies to
 %  
 \begin{equation}
 \label{eq:bmadsbound}
-r_* < -\frac{5}{{\cal{N}}^2_{\rm eff}} 
+r_* < -\frac{5}{\Neff^2} 
 \frac{\fnl}{(n-1)\sqrt{N}} \,.
 \end{equation}
 %  
@@ -1223,29 +1223,29 @@ implies that the LH bound is stronger than the corresponding BM bound if
 % 
 \begin{equation}
 \label{eq:LHstrongerads}
-n > 1 -5.5 \times 10^{-14} N^{3/2} {\cal{N}}_{\rm eff}^2 \fnl 
+n > 1 -5.5 \times 10^{-14} N^{3/2} \Neff^2 \fnl 
 \end{equation}
 % 
 and this condition is always satisfied if 
 % 
 \begin{equation}
 \label{eq:allNbound-multi}
--5.5 \times 10^{-14} N^{3/2} {\cal{N}}_{\rm eff}^2 \fnl  <1  \, .
+-5.5 \times 10^{-14} N^{3/2} \Neff^2 \fnl  <1  \, .
 \end{equation}
 % 
 Moreover, the bound (\ref{eq:allNbound-multi}) will itself be satisfied for 
 all values of $\fnl$ and $N$ if it is satisfied when the limits 
 $\fnl =-151$ and $N=75852$ are imposed. Hence, we conclude that the LH bound 
-is stronger for ${\cal{N}_{\rm eff}} < 75$. 
+is stronger for $\Neff < 75$. 
 In general, it is difficult to quantify 
-the magnitude of $\mathcal{N}_{\mathrm{eff}}$ without 
+the magnitude of $\Neff$ without 
 imposing further restrictions on the parameters of the models 
 and, in particular, on the functional form of the inflaton potential. 
 However, if the ratio $\epsilon_H/P_{,X}$ remains approximately 
 constant during the final stages of inflation, one would anticipate that 
-${\cal{N}}_{\rm eff} \lsim 60$. Nevertheless, if $N \ll 75852$, the bound 
+$\Neff \lsim 60$. Nevertheless, if $N \ll 75852$, the bound 
 (\ref{eq:LHstrongerads}) will only be violated for $n \le 3$ if 
-${\cal{N}}_{\rm eff} \gg 60$.  
+$\Neff \gg 60$.  
 
 
 Finally, it should be emphasized that the derivation of the LH bound 
