Minor Ps to Pr change.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.36 2009/09/01 09:37:38 ith Exp $
+% $Id: dbi-intro.tex,v 1.37 2009/09/16 13:30:19 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.36 2009/09/01 09:37:38 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.37 2009/09/16 13:30:19 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -679,7 +679,7 @@ may be combined to provide a relation for the warped brane tension:
 \begin{equation}
 \label{eq:obswarp-dbiintro}
 \frac{T (\varphi)}{\Mpl^4}  = 
-\frac{\pi^2}{16} r^2P_S^2 \left( 1-\frac{1}{3\fnl} \right) \,.
+\frac{\pi^2}{16} r^2\Pr \left( 1-\frac{1}{3\fnl} \right) \,.
 \end{equation}
 % 
 
