--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.22 2009/09/16 13:01:57 ith Exp $
+% $Id: dbi.tex,v 1.23 2009/09/16 13:30:36 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.22 2009/09/16 13:01:57 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.23 2009/09/16 13:30:36 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -206,7 +206,6 @@ corresponds to a narrow range of inflaton values.
 To a first approximation, therefore, the fraction of the throat volume 
 (\ref{eq:throatvolume}) that is accessible to cosmological 
 observation can be estimated to be 
-\addtodo{ Show working}
 % 
 \begin{equation}
 \label{eq:trapezium}
@@ -226,24 +225,23 @@ then implies that
 and substituting the CMB normalization (\ref{eq:obswarp-dbiintro}) and 
 condition (\ref{eq:trapeziumlimit}) into the bound (\ref{eq:halfwayconstraint}) 
 yields the upper limit   
-\addtodo{ Show working}
 % 
 \begin{equation}
 \label{eq:boundpower6}
 \left( \frac{\Delta \varphi}{\Mpl} \right)^6_{*} 
-< \frac{\pi^3}{16\mathrm{Vol}(X_5)} r^2 P_S^2 
+< \frac{\pi^3}{16\mathrm{Vol}(X_5)} r^2 \Pr 
 \left( 1- \frac{1}{3\fnl} \right)  \,.
 \end{equation}
 % 
-Hence, employing the Lyth bound in the form $(\Delta \varphi_* / \Mpl )^2 \simeq 
+Hence, employing the Lyth bound \eqref{eq:rtheory} in the form
+$(\Delta \varphi_* / \Mpl )^2 \simeq 
 r (\Delta \N_*)^2 /8$  
 results in a very general upper limit on the tensor-scalar ratio: 
-\addtodo{ Show working}
 % 
 \begin{equation}
 \label{eq:generalbound}
 r_{*} < \frac{32 \pi^3}{(\Delta \N_*)^6 \mathrm{Vol}(X_5)} 
-P_S^2 \left( 1- \frac{1}{3\fnl} \right) \,.
+\Pr \left( 1- \frac{1}{3\fnl} \right) \,.
 \end{equation}
 % 
 
@@ -253,7 +251,7 @@ only weakly dependent on the level of non-Gaussianity
 when $\fnl < -5$ and we may therefore neglect the 
 factor involving this parameter. 
 Substituting the WMAP5 normalization 
-$P_S^2 = 2.5 \times 10^{-9}$ then implies that
+$\Pr \simeq 2.5 \times 10^{-9}$ then implies that
 %  
 \begin{equation}
 \label{eq:upperbound}
@@ -576,7 +574,7 @@ and the scalar perturbation amplitude by
 % 
 \begin{equation}
 \label{eq:spectrum-dbi}
-P_S^2 = \frac{1}{2\pi^2}\frac{H^4}{f_1f_2\dot{\varphi}^2}  \,.
+\Pr = \frac{1}{2\pi^2}\frac{H^4}{f_1f_2\dot{\varphi}^2}  \,.
 \end{equation}
 % 
 However, the consistency equation (\ref{eq:rdefn-dbiintro}) and 
@@ -589,7 +587,7 @@ generalizes to a constraint on the value of $f_1 (\varphi_*)$:
 %   
 \begin{equation}
 \label{eq:observef1}
-\left( \frac{f_1}{\Mpl^4} \right)_{*} \simeq \frac{\pi^2}{16} r^2P_S^2
+\left( \frac{f_1}{\Mpl^4} \right)_{*} \simeq \frac{\pi^2}{16} r^2\Pr
 \left( 1- \frac{1}{3\fnl} \right)  \,.
 \end{equation}
 % 
@@ -666,7 +664,7 @@ for the generalized BM bound to be satisfied:
 \begin{equation}
 \label{eq:f2bound}
 \frac{f_2 (\varphi_*)\Mpl^4}{N} > \frac{(\Delta \N_*)^2}{\pi^2} 
-\frac{1}{rP_S^2} \,.
+\frac{1}{r\Pr} \,.
 \end{equation}
 % 
 This condition can also be interpreted as a lower limit on $r$ 
@@ -705,7 +703,7 @@ for the generalized BM bound to be satisfied in IR inflation:
 \begin{equation}
 \label{eq:f2IRlower}
 \frac{f_2\Mpl^4}{N} > \frac{\sqrt{3} (\Delta \N_*)^2}{4\pi^2}
-\frac{\sqrt{-\fnl}}{(1-n_s)P_S^2}  \,.
+\frac{\sqrt{-\fnl}}{(1-n_s)\Pr}  \,.
 \end{equation}
 % 
 
