--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.23 2009/09/16 13:30:36 ith Exp $
+% $Id: dbi.tex,v 1.24 2009/09/16 14:43:05 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.23 2009/09/16 13:30:36 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.24 2009/09/16 14:43:05 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -360,7 +360,7 @@ and (\ref{indices}), we find that
 \begin{equation}
 \label{eq:nsconstraint}
 1-n_s = 4 \epsilon_H +\frac{2s}{1-\gamma^2} \mp 
-\frac{2\Mpl^2}{\gamma} \frac{T'|H'|}{TH}  \,,
+\frac{2\Mpl^2}{\gamma} \frac{T_{,\vp}|H_{,\vp}|}{TH}  \,,
 \end{equation}
 % 
 where the minus (plus) sign corresponds to 
@@ -377,7 +377,7 @@ into Eq. (\ref{eq:nsconstraint}) then yields
 \begin{equation}
 \label{eq:obscon1}
 1-n_s = \frac{r}{4} \sqrt{1-3\fnl} + \frac{\nnl}{1-3\fnl}
-\mp \sqrt{\frac{r}{8}} \left( \frac{T'}{T} \Mpl \right)_*  \,.
+\mp \sqrt{\frac{r}{8}} \left( \frac{T_{,\vp}}{T} \Mpl \right)_*  \,.
 \end{equation}
 % 
 
@@ -600,7 +600,7 @@ is straightforward to show that
 \label{eq:nsconstraintW}
 1-n_s = \frac{r}{4} \sqrt{1-3\fnl}
  +\frac{\nnl}{1-3\fnl} \mp \sqrt{\frac{r}{4f_1f_2}} \left( 
-\frac{f_1'}{f_1} \Mpl \right)_*  \,.
+\frac{f_{1,\vp}}{f_1} \Mpl \right)_*  \,.
 \end{equation}
 % 
 
@@ -688,7 +688,7 @@ f_1f_2 > \frac{N (\Delta \N_*)^2 (1-n_s)}{4\sqrt{-3\fnl}} \,.
 
 In IR scenarios, however, the positive sign will apply in the 
 last term of the right-hand side of Eq. (\ref{eq:nsconstraintW}).
-Hence, assuming $f'_1 >0$ and neglecting the term proportional to 
+Hence, assuming $f_{1,\vp} >0$ and neglecting the term proportional to 
 $\nnl/\fnl$ yields an {\em upper} limit on the tensor-scalar ratio:
 % 
 \begin{equation}
