--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.20 2009/09/16 13:08:04 ith Exp $
+% $Id: multibrane.tex,v 1.21 2009/09/16 14:43:05 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.20 2009/09/16 13:08:04 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.21 2009/09/16 14:43:05 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -186,7 +186,7 @@ a limit on the value of the warp factor $h(\varphi_*)$ on CMB scales:
 \begin{equation}
 \label{eq:warptorelax}
 \frac{NT_3h^4_*}{\Mpl^4} < 
-\frac{8\pi^2 (1-n_s)P_S^2}{\sqrt{-3\fnl}(\Delta \N_*)^2} \,.
+\frac{8\pi^2 (1-n_s)\Pr}{\sqrt{-3\fnl}(\Delta \N_*)^2} \,.
 \end{equation}
 % 
 
@@ -202,7 +202,7 @@ value of the inflation during observable inflation:
 \begin{equation}
 \label{eq:phivalue-dbi}
 \frac{\varphi_*^4}{\Mpl^4} < 
-\frac{8\pi^2 (1-n_s)P_S^2}{\sqrt{-3\fnl} ( \Delta \N_*)^2} 
+\frac{8\pi^2 (1-n_s)\Pr}{\sqrt{-3\fnl} ( \Delta \N_*)^2} 
 \frac{\lambda}{N} \,,
 \end{equation}
 %  
@@ -217,7 +217,7 @@ ${\rm D3}$-brane charge:
 % 
 \begin{equation}
 \label{eq:Nlimit-dbi}
-N< \frac{8\pi^2 (1-n_s)P_S^2}{\sqrt{-3\fnl} ( \Delta \N_*)^2}
+N< \frac{8\pi^2 (1-n_s)\Pr}{\sqrt{-3\fnl} ( \Delta \N_*)^2}
 \left( \frac{\Mpl}{h_{\rm cut}m_s} \right)^4  \,.
 \end{equation}
 % 
@@ -242,7 +242,7 @@ Hence, combining inequalities
 \begin{equation}
 \label{eq:nlimit-dbi}
 \hat{C} \ll 
-\frac{32 \pi^4 (1-n_s)P_S^2}{\sqrt{-3\fnl} ( \Delta \N_*)^2}
+\frac{32 \pi^4 (1-n_s)\Pr}{\sqrt{-3\fnl} ( \Delta \N_*)^2}
 \frac{g_s}{\mathrm{Vol} (X_5) }
 \left( \frac{\Mpl}{h_{\rm cut}m_s} \right)^4  \,,
 \end{equation}
@@ -278,7 +278,7 @@ In this case, the generalized BM bound (\ref{eq:warptorelax}) becomes
 \label{eq:loglimit-dbi}
 \frac{8\pi K}{3Mg_s} -\ln N > 4 \ln \left( \frac{m_s}{g_s^{1/4}\Mpl} \right)
 -\ln \left( 
-\frac{64\pi^5 (1-n_s)P_S^2}{\sqrt{-3\fnl} ( \Delta \N_*)^2}
+\frac{64\pi^5 (1-n_s)\Pr}{\sqrt{-3\fnl} ( \Delta \N_*)^2}
 \right) \,.
 \end{equation}
 % 
@@ -295,7 +295,7 @@ generalized BM bound to be satisfied:
 \label{eq:Nlowerlimit-dbi}
 \frac{1}{N} \exp \left( \frac{8\pi g_s N}{3}  \right)
 > \frac{\sqrt{-3\fnl} ( \Delta \N_*)^2}{64\pi^5 
-(1-n_s)P_S^2} \frac{1}{g_s} \left( \frac{m_s}{\Mpl} \right)^4 \,.
+(1-n_s)\Pr} \frac{1}{g_s} \left( \frac{m_s}{\Mpl} \right)^4 \,.
 \end{equation}
 % 
 
