Changed some eq labels and used \nnl.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.38 2009/09/16 14:43:06 ith Exp $
+% $Id: dbi-intro.tex,v 1.39 2009/09/16 15:32:59 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.38 2009/09/16 14:43:06 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.39 2009/09/16 15:32:59 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -568,7 +568,7 @@ varying inflaton can be expressed in the form \cite{brane6}
 \label{eq:Friedmann-dbiintro}
 3 \Mpl^2 H^2(\varphi ) &=& V(\varphi ) -T(\varphi ) 
 \left[ 1- \sqrt{1+4\Mpl^4T^{-1} H_{,\vp}^2} \right] \,,\\
-\label{useful}
+\label{eq:phidot-useful}
 \dot{\varphi} &=& - \frac{2\Mpl^2H_{,\vp}}{\sqrt{1+4\Mpl^4 T^{-1} H_{,\vp}^2}}
 \,.
 \end{eqnarray}
